--- a/BoutiqueRetails.ipynb
+++ b/BoutiqueRetails.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dbb8b6e5",
+   "id": "1a04e7b7",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "870d4644",
+   "id": "4aee1428",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c9ab69c1",
+   "id": "6fa0244a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,333 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "bd02c685",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Store</th>\n",
-       "      <th>Dept</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Weekly_Sales</th>\n",
-       "      <th>IsHoliday</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>05/02/2010</td>\n",
-       "      <td>24924.50</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12/02/2010</td>\n",
-       "      <td>46039.49</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19/02/2010</td>\n",
-       "      <td>41595.55</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>26/02/2010</td>\n",
-       "      <td>19403.54</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>05/03/2010</td>\n",
-       "      <td>21827.90</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Store  Dept        Date  Weekly_Sales  IsHoliday\n",
-       "0      1     1  05/02/2010      24924.50      False\n",
-       "1      1     1  12/02/2010      46039.49       True\n",
-       "2      1     1  19/02/2010      41595.55      False\n",
-       "3      1     1  26/02/2010      19403.54      False\n",
-       "4      1     1  05/03/2010      21827.90      False"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(sales.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "79c3004b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Store</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Size</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>A</td>\n",
-       "      <td>151315</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>A</td>\n",
-       "      <td>202307</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>B</td>\n",
-       "      <td>37392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>A</td>\n",
-       "      <td>205863</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>B</td>\n",
-       "      <td>34875</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Store Type    Size\n",
-       "0      1    A  151315\n",
-       "1      2    A  202307\n",
-       "2      3    B   37392\n",
-       "3      4    A  205863\n",
-       "4      5    B   34875"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(stores.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "1004d793",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Store</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Temperature</th>\n",
-       "      <th>Fuel_Price</th>\n",
-       "      <th>MarkDown1</th>\n",
-       "      <th>MarkDown2</th>\n",
-       "      <th>MarkDown3</th>\n",
-       "      <th>MarkDown4</th>\n",
-       "      <th>MarkDown5</th>\n",
-       "      <th>CPI</th>\n",
-       "      <th>Unemployment</th>\n",
-       "      <th>IsHoliday</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>05/02/2010</td>\n",
-       "      <td>42.31</td>\n",
-       "      <td>2.572</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>211.096358</td>\n",
-       "      <td>8.106</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>12/02/2010</td>\n",
-       "      <td>38.51</td>\n",
-       "      <td>2.548</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>211.242170</td>\n",
-       "      <td>8.106</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>19/02/2010</td>\n",
-       "      <td>39.93</td>\n",
-       "      <td>2.514</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>211.289143</td>\n",
-       "      <td>8.106</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>26/02/2010</td>\n",
-       "      <td>46.63</td>\n",
-       "      <td>2.561</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>211.319643</td>\n",
-       "      <td>8.106</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>05/03/2010</td>\n",
-       "      <td>46.50</td>\n",
-       "      <td>2.625</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>211.350143</td>\n",
-       "      <td>8.106</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Store        Date  Temperature  Fuel_Price  MarkDown1  MarkDown2  \\\n",
-       "0      1  05/02/2010        42.31       2.572        NaN        NaN   \n",
-       "1      1  12/02/2010        38.51       2.548        NaN        NaN   \n",
-       "2      1  19/02/2010        39.93       2.514        NaN        NaN   \n",
-       "3      1  26/02/2010        46.63       2.561        NaN        NaN   \n",
-       "4      1  05/03/2010        46.50       2.625        NaN        NaN   \n",
-       "\n",
-       "   MarkDown3  MarkDown4  MarkDown5         CPI  Unemployment  IsHoliday  \n",
-       "0        NaN        NaN        NaN  211.096358         8.106      False  \n",
-       "1        NaN        NaN        NaN  211.242170         8.106       True  \n",
-       "2        NaN        NaN        NaN  211.289143         8.106      False  \n",
-       "3        NaN        NaN        NaN  211.319643         8.106      False  \n",
-       "4        NaN        NaN        NaN  211.350143         8.106      False  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(features.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
-   "id": "deffced6",
+   "id": "bab4a4f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,154 +55,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "f04e8515",
+   "execution_count": 30,
+   "id": "93855c29",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Store</th>\n",
-       "      <th>Dept</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Weekly_Sales</th>\n",
-       "      <th>IsHoliday</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Size</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>05/02/2010</td>\n",
-       "      <td>24924.50</td>\n",
-       "      <td>False</td>\n",
-       "      <td>A</td>\n",
-       "      <td>151315</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12/02/2010</td>\n",
-       "      <td>46039.49</td>\n",
-       "      <td>True</td>\n",
-       "      <td>A</td>\n",
-       "      <td>151315</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19/02/2010</td>\n",
-       "      <td>41595.55</td>\n",
-       "      <td>False</td>\n",
-       "      <td>A</td>\n",
-       "      <td>151315</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>26/02/2010</td>\n",
-       "      <td>19403.54</td>\n",
-       "      <td>False</td>\n",
-       "      <td>A</td>\n",
-       "      <td>151315</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>05/03/2010</td>\n",
-       "      <td>21827.90</td>\n",
-       "      <td>False</td>\n",
-       "      <td>A</td>\n",
-       "      <td>151315</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Store  Dept        Date  Weekly_Sales  IsHoliday Type    Size\n",
-       "0      1     1  05/02/2010      24924.50      False    A  151315\n",
-       "1      1     1  12/02/2010      46039.49       True    A  151315\n",
-       "2      1     1  19/02/2010      41595.55      False    A  151315\n",
-       "3      1     1  26/02/2010      19403.54      False    A  151315\n",
-       "4      1     1  05/03/2010      21827.90      False    A  151315"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(CompanyData.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "b355d038",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "warning: in the working copy of '.ipynb_checkpoints/Untitled-checkpoint.ipynb', LF will be replaced by CRLF the next time Git touches it\n",
-      "warning: in the working copy of 'Untitled.ipynb', LF will be replaced by CRLF the next time Git touches it\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!git add . "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "f42612f8",
+   "execution_count": 32,
+   "id": "3383be88",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (447776043.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Sarr Michel\\AppData\\Local\\Temp\\ipykernel_14676\\447776043.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    git config --global core.autocrlf false\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\tmodified:   BoutiqueRetails.ipynb\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
     }
    ],
    "source": [
-    "git config --global core.autocrlf false\n"
+    "!git commit -m 'suprression'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "727e4317",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1319213565.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Sarr Michel\\AppData\\Local\\Temp\\ipykernel_14676\\1319213565.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    git add BoutiqueRetails.ipynb\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "git add BoutiqueRetails.ipynb"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b408448e",
+   "id": "8e9c1dd6",
    "metadata": {},
    "outputs": [],
    "source": []
