--- a/JeuxOlympiques/jeuxOlympiques.ipynb
+++ b/JeuxOlympiques/jeuxOlympiques.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "074b2cd7",
+   "id": "5ebbd9e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "18b2e927",
+   "id": "274648b3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd \n",
     "path = 'C:/Users/Sarr Michel/Desktop/PythonForDS/Donnees/JeuxOlympiques/'\n",
     "athletes = pd.read_csv(path+'athlete_events.csv') \n",
     "regions = pd.read_csv(path+'noc_regions.csv')"
@@ -25,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "746e8ded",
+   "id": "84fad810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,12 +35,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7b9963aa",
+   "execution_count": 11,
+   "id": "b838c696",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git"
+    "!git add jeuxOlympiques.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "450d9543",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 6a60236] 'jO86'\n",
+      " 2 files changed, 73 insertions(+)\n",
+      " create mode 100644 JeuxOlympiques/.ipynb_checkpoints/jeuxOlympiques-checkpoint.ipynb\n",
+      " create mode 100644 JeuxOlympiques/jeuxOlympiques.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m 'jO86'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fd249ed5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "To https://github.com/mwsarr/ProjectPython.git\n",
+      "   5869663..6a60236  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b42fce75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
    ]
   }
  ],
